--- a/src/app/_components/password-recovery/password-recovery.component.html
+++ b/src/app/_components/password-recovery/password-recovery.component.html
@@ -1,93 +1,93 @@
-<div class="background"></div>
-<div id="recovery-password-container">
-    <img src="../../../assets/images/backgrounds/recover.png">
-    <ng-template *ngIf="!hasToken" [ngTemplateOutlet]="request_resetPassword"></ng-template>
-    <ng-template *ngIf="hasToken" [ngTemplateOutlet]="resetPassword"></ng-template>
-    
-    <ng-template #request_resetPassword>
-        <div class="title">Recuperação de senha</div>
-        <form [formGroup]="recoveryRequest" (submit)="requestRecover()">
-            <div class="form-group">
-                <label for="username">Digite seu e-mail</label>
-                <input type="email" class="form-control" formControlName = "login" [ngClass]="{'invalid-field': !recoveryRequest.get('login').valid && recoveryRequest.get('login').touched}">
-                <div class="invalid-message" *ngIf="!recoveryRequest.get('login').valid && recoveryRequest.get('login').touched">
-                    <span>E-mail inválido.</span>
+<div class="background">
+    <div id="recovery-password-container">
+        <ng-template *ngIf="!hasToken" [ngTemplateOutlet]="request_resetPassword"></ng-template>
+        <ng-template *ngIf="hasToken" [ngTemplateOutlet]="resetPassword"></ng-template>
+        
+        <ng-template #request_resetPassword>
+            <div class="title">Recuperação de senha</div>
+            <form [formGroup]="recoveryRequest" (submit)="requestRecover()">
+                <div class="form-group">
+                    <label for="username">Digite seu e-mail</label>
+                    <input type="email" class="form-control" formControlName = "login" [ngClass]="{'invalid-field': !recoveryRequest.get('login').valid && recoveryRequest.get('login').touched}">
+                    <div class="invalid-message" *ngIf="!recoveryRequest.get('login').valid && recoveryRequest.get('login').touched">
+                        <span>E-mail inválido.</span>
+                    </div>
                 </div>
-            </div>
-            <div class="buttons">
-                <div class="btn-cancel" (click)="router.navigate(['/login'])">
-                    <span>Cancelar</span>
+                <div class="buttons">
+                    <div class="btn-cancel" (click)="router.navigate(['/login'])">
+                        <span>Cancelar</span>
+                    </div>
+                    <button class="btn-advance" type="submit" [disabled]="!recoveryRequest.get('login').valid">
+                        <span>Enviar</span>
+                    </button>
                 </div>
-                <button class="btn-advance" type="submit" [disabled]="!recoveryRequest.get('login').valid">
-                    <span>Enviar</span>
-                </button>
-            </div>
-        </form>
-    </ng-template>
-    <ng-template #resetPassword>
-        <div class="title">Cadastrar nova senha</div>
-        <form [formGroup]="recovery" (submit)="recoverPassword()">
-            <div class="form-group">
-                <label for="">Digite sua nova senha</label>
-                <div class="password-fields">
-                    <input  [type]="passwordFieldVisible ? 'text' : 'password'" class="form-control" formControlName = "password">
-                    <span class="dds__icons" [ngClass]="{
-                        'dds__eye-view-on': passwordFieldVisible, 
-                        'dds__eye-view-off': !passwordFieldVisible
-                    }" (click)="toglePasswordField()"></span>
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="">Confirme sua nova senha</label>
-                <div class="password-fields">
-                    <input [type]="passwordConfirmationFieldVisible ? 'text' : 'password'" class="form-control" formControlName = "confirmPassword"
-                    [ngClass]="{'invalid-field': recovery.get('confirmPassword').valid && 
-                    recovery.get('confirmPassword').touched && 
-                    recovery.get('confirmPassword').value != recovery.get('password').value && 
-                    recovery.get('password').value != ''}">
+            </form>
+        </ng-template>
+        <ng-template #resetPassword>
+            <div class="title">Cadastrar nova senha</div>
+            <form [formGroup]="recovery" (submit)="recoverPassword()">
+                <div class="form-group">
+                    <label for="">Digite sua nova senha</label>
+                    <div class="password-fields">
+                        <input  [type]="passwordFieldVisible ? 'text' : 'password'" class="form-control" formControlName = "password">
                         <span class="dds__icons" [ngClass]="{
-                            'dds__eye-view-on': passwordConfirmationFieldVisible, 
-                            'dds__eye-view-off': !passwordConfirmationFieldVisible
-                        }" (click)="toglePasswordConfirmField()"></span>
+                            'dds__eye-view-on': passwordFieldVisible, 
+                            'dds__eye-view-off': !passwordFieldVisible
+                        }" (click)="toglePasswordField()"></span>
+                    </div>
                 </div>
-                <div class="invalid-message" *ngIf="recovery.get('confirmPassword').valid && recovery.get('confirmPassword').touched && 
-                        recovery.get('confirmPassword').value != recovery.get('password').value && recovery.get('password').value != ''">
-                           <span>Este campo deve ser igual ao campo senha!</span>
+                <div class="form-group">
+                    <label for="">Confirme sua nova senha</label>
+                    <div class="password-fields">
+                        <input [type]="passwordConfirmationFieldVisible ? 'text' : 'password'" class="form-control" formControlName = "confirmPassword"
+                        [ngClass]="{'invalid-field': recovery.get('confirmPassword').valid && 
+                        recovery.get('confirmPassword').touched && 
+                        recovery.get('confirmPassword').value != recovery.get('password').value && 
+                        recovery.get('password').value != ''}">
+                            <span class="dds__icons" [ngClass]="{
+                                'dds__eye-view-on': passwordConfirmationFieldVisible, 
+                                'dds__eye-view-off': !passwordConfirmationFieldVisible
+                            }" (click)="toglePasswordConfirmField()"></span>
+                    </div>
+                    <div class="invalid-message" *ngIf="recovery.get('confirmPassword').valid && recovery.get('confirmPassword').touched && 
+                            recovery.get('confirmPassword').value != recovery.get('password').value && recovery.get('password').value != ''">
+                            <span>Este campo deve ser igual ao campo senha!</span>
+                            </div>
+                </div>
+                <div *ngIf="!recovery.get('password').valid">
+                    <label class="password-errors-label">Sua senha deve conter</label>
+                    <div class="password-errors">
+                        <div class="errors" *ngIf="!recovery.get('password').hasError('minLength')">
+                            <span class="dds__icons dds__check">
+                            </span>
+                            <label>Mais de 8 caracteres</label>
                         </div>
-            </div>
-            <div *ngIf="!recovery.get('password').valid">
-                <label class="password-errors-label">Sua senha deve conter</label>
-                <div class="password-errors">
-                    <div class="errors" *ngIf="!recovery.get('password').hasError('minLength')">
-                        <span class="dds__icons dds__check">
-                        </span>
-                        <label>Mais de 8 caracteres</label>
+                        <div class="errors" *ngIf="!recovery.get('password').hasError('hasUpperCase')">
+                            <span class="dds__icons dds__check">
+                            </span>
+                            <label>Uma letra maiúscula </label>
+                        </div>
+                        <div class="errors" *ngIf="!recovery.get('password').hasError('hasNumeric')">
+                            <span class="dds__icons dds__check">
+                            </span>
+                            <label>Um número</label>
+                        </div>
+                        <div class="errors" *ngIf="!recovery.get('password').hasError('specialCharacters')">
+                            <span class="dds__icons dds__check">
+                            </span>
+                            <label>Um caractere especial</label>
+                        </div>
                     </div>
-                    <div class="errors" *ngIf="!recovery.get('password').hasError('hasUpperCase')">
-                        <span class="dds__icons dds__check">
-                        </span>
-                        <label>Uma letra maiúscula </label>
+                </div>   
+                <div class="buttons">
+                    <div class="btn-cancel" (click)="router.navigate(['/login'])">
+                        <span>Cancelar</span>
                     </div>
-                    <div class="errors" *ngIf="!recovery.get('password').hasError('hasNumeric')">
-                        <span class="dds__icons dds__check">
-                        </span>
-                        <label>Um número</label>
-                    </div>
-                    <div class="errors" *ngIf="!recovery.get('password').hasError('specialCharacters')">
-                        <span class="dds__icons dds__check">
-                        </span>
-                        <label>Um caractere especial</label>
-                    </div>
+                    <button class="btn-advance" type="submit" [disabled]="!recovery.valid || recovery.get('confirmPassword').value != recovery.get('password').value">
+                        <span>Enviar</span>
+                    </button>
                 </div>
-            </div>   
-            <div class="buttons">
-                <div class="btn-cancel" (click)="router.navigate(['/login'])">
-                    <span>Cancelar</span>
-                </div>
-                <button class="btn-advance" type="submit" [disabled]="!recovery.valid || recovery.get('confirmPassword').value != recovery.get('password').value">
-                    <span>Enviar</span>
-                </button>
-            </div>
-        </form>
-    </ng-template>
+            </form>
+        </ng-template>
+    </div>
 </div>
