--- a/src/app/_components/password-recovery/password-recovery.component.scss
+++ b/src/app/_components/password-recovery/password-recovery.component.scss
@@ -1,28 +1,15 @@
-img {
-  background-size: cover;
-  height: 360px;
-  width: 360px;
-  margin-top: 6%;
-  margin-left: 50%;
-  position: absolute;
-  z-index: -1;
-  rotate: 16deg;
-}
-  
 #recovery-password-container {
-  width: 70%;
-  margin: 4% 0% 0% 8%;
+  width: 35%;
 }
 
 .title {
   color: #000000;
-  font-size: 2rem;
+  font-size: 3rem;
   font-weight: bold;
   margin-bottom: 1%;
 }
 
 .form-group {
-  max-width: 40%;
   margin-bottom: 10px!important;
   label {
     font-weight: 500;
@@ -48,9 +35,11 @@ a {
   background-color: #43d19e;
   display: flex;
   padding: 1%;
+  min-height: 40px;
   min-width: 10rem;
   margin: 2% 0%;
   justify-content: center;
+  align-items: center;
 }
 
 .btn-cancel {
@@ -61,41 +50,17 @@ a {
   display: flex;
   padding: .8%;
   cursor: pointer;
+  min-height: 40px;
   min-width: 10rem;
   margin: 0% 1% 0% 0%;
   justify-content: center;
-}
-
-.password-errors-label{
-  font-weight: bold;
-  margin-top: 1%;
-}
-
-.dds__check{
-  font-size: 1.3rem !important;
-  font-weight: bolder !important;
-}
-
-.errors {
-  label{
-    margin-left: 2%;
-    color: #989898;
-  }
-  display: flex;
   align-items: center;
-  padding: 1%;
 }
 
-.password-fields{
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  span {
-    position: absolute;
-    padding-right: 1.2%;
-  }
-}
 .background {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   position: fixed;
   top: 0;
   right: 0;
@@ -116,4 +81,37 @@ a {
 .buttons{
   display: flex;
   align-items: center;
+}
+
+.password-errors-label{
+  font-weight: bold;
+}
+.password-errors {
+  .dds__icons {
+    color: #000000;
+  }
+}
+.dds__check{
+ font-size: 1.3rem !important;
+ font-weight: bolder !important;
+}
+
+.errors {
+  label{
+    margin-left: 2px;
+    color: #989898;
+  }
+  display: flex;
+  align-items: center;
+  padding: 2px;
+}
+
+.password-fields{
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  span {
+    position: absolute;
+    padding-right: 1.2%;
+  }
 }
