--- a/src/app/_components/search/search.component.html
+++ b/src/app/_components/search/search.component.html
@@ -49,7 +49,7 @@
             <span>∨</span>
           </div>
         </div>
-        <div class="col-1 filter-field" (click)="orderByfinancingValue()">
+        <div class="col-1 filter-field value-field" (click)="orderByfinancingValue()">
           <span>Valor</span>
           <div class="static-filter">
             <span>∧</span>
