--- a/src/app/_pages/login/login.component.html
+++ b/src/app/_pages/login/login.component.html
@@ -1,33 +1,34 @@
-<img src="../../../assets/images/backgrounds/Login.png">
-<div class="background"></div>
-<div id="login-container">
-  <form [formGroup]="loginForm" (ngSubmit)="login()">
-    <div class="title">Login</div>
-    <div class="form-group">
-      <label for="username">Email</label>
-      <input type="email" class="form-control" required [ngClass]="{'invalid-field': loginForm.get('login').invalid && loginForm.get('login').value !=''}"
-        formControlName = "login" id="username" name="username"
-        aria-describedby="Digitar Email" placeholder="Email">
-      <div class="invalid-message" *ngIf="loginForm.get('login').invalid && loginForm.get('login').value !=''">
-        <span>Informação não é válida.</span>
+<div class="background">
+  <div id="login-container">
+    <form [formGroup]="loginForm" (ngSubmit)="login()">
+      <div class="title">Login</div>
+      <div class="form-group">
+        <label for="username">Email</label>
+        <input type="email" class="form-control" required [ngClass]="{'invalid-field': loginForm.get('login').invalid && loginForm.get('login').value !=''}"
+          formControlName = "login" id="username" name="username"
+          aria-describedby="Digitar Email" placeholder="Email">
+        <div class="invalid-message" *ngIf="loginForm.get('login').invalid && loginForm.get('login').value !=''">
+          <span>Informação não é válida.</span>
+        </div>
       </div>
-    </div>
-    <div class="form-group">
-      <label for="password">Senha</label>
-      <input type="password" class="form-control" id="password" required
-        formControlName="password" name="password"
-        aria-describedby="Digitar senha" placeholder="Senha">
-    </div>
-    <div class="forgot-password-link">
-      <a href="/password-recovery"> Esqueceu sua senha? </a>
-    </div>
-    <button class="btn-advance" type="submit">
-      <span>Entrar</span>
-    </button>
-    <div class="create-account-link">
-      <span> Ainda não tem uma conta ? </span>
-      <a href="/create-account"> Cadastre-se. </a>
-    </div>
-    <br>
-  </form>
+      <div class="form-group">
+        <label for="password">Senha</label>
+        <input type="password" class="form-control mb-2" id="password" required
+          formControlName="password" name="password"
+          aria-describedby="Digitar senha" placeholder="Senha">
+          <div class="forgot-password-link">
+            <a href="/password-recovery"> Esqueceu sua senha? </a>
+          </div>
+      </div>
+      
+      <button class="btn-advance" type="submit">
+        <span>Entrar</span>
+      </button>
+      <div class="create-account-link">
+        <span> Ainda não tem uma conta ? </span>
+        <a href="/create-account"> Cadastre-se. </a>
+      </div>
+      <br>
+    </form>
+  </div>
 </div>
