--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,8 +13,8 @@
                 <span class="ms-1 d-none d-sm-inline">Seu perfil</span>
               </a>
             </li>
-            <li class="nav-item" routerLinkActive="item-selected">
-                <a [routerLink]="['/recomendations']" class="nav-link align-middle px-0">
+            <li class="nav-item disabled" routerLinkActive="item-selected">
+                <a [routerLink]="['/']" class="nav-link align-middle px-0">
                   <span class="icons_google material-symbols-outlined">
                     dashboard
                     </span>
