Upload de imagem de perfil

--- a/src/app/_components/recomendations/recomendations.component.html
+++ b/src/app/_components/recomendations/recomendations.component.html
@@ -74,7 +74,7 @@
             <div class="right-side col-3">
               <div class="user-space">
                 <div class="user-img">
-                  <img src="../../../assets/images/new/perfilDefault.jpg">
+                  <img src="{{user.user.profileImageUrl}}">
                 </div>
                 <div class="user-labels">
                   <label>{{user.user.name}} {{user.user.lastName}}</label>
