--- a/src/app/_pages/users/user-profile/user-profile.component.scss
+++ b/src/app/_pages/users/user-profile/user-profile.component.scss
@@ -31,8 +31,10 @@
   padding-top: 3%;
   .user-img {
       img {
-          border-radius: 100px;
-          margin: 20% 0%;   
+          border-radius: 50%;
+          margin: 10% 0% 10% 0%;
+          cursor: pointer;
+          max-height: 150px;
       }
   }
   .user-labels {
